# scrapy-processors

./: .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
README/: What's A Processor.md  built-in-collections.md  built-in-dunder-call.md  built-in-process-value.md  subclassing-processor-and-processorcollection.md  whats-a-processor.md  whats-context.md
docs/: dirty_data.html
scrapy_processors/: __init__.py  base.py  builtin_subclasses.py  collections.py  common.py  contact.py  date_and_time.py  decorators.py  extended_processors.py  iterable.py  json.py  misc.py  multi_values.py  numeric.py  processors.py  single_value.py  string.py  utils.py
scrapy_processors/redone/: contact.py  date_and_time.py  numeric.py  text.py
tests/: conftest.py  test_base.py  test_builtin_subclasses.py  test_collections.py  test_date_and_time.py  test_extended_processors.py  test_iterable.py  test_json.py  test_multi_values.py  test_numeric.py  test_processors.py  test_single_value.py  test_string.py  test_utils.py  tests_single_value_processors.py
tests/integration_test/: cleaned_data.json  dirty_data.html  test_integration.py
tests/integration_test/scrapy_project/: item_loaders.py  itemloaders.py  settings.py
tests/integration_test/scrapy_project/spiders/: dirty_data.py
