
[tool.poetry]
name = "scrapy-processors"
version = "1.1.1"
description = "Provides processors for the itemloaders package, commonly used with scrapy."
authors = ["Nicholas Mischke <nmischkework@proton.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scrapy_processors"}]
repository = "https://github.com/nicholas-mischke/scrapy-processors"

[tool.poetry.dependencies]
python = "^3.7"
itemloaders = "1.1.0"
emoji = "2.2.0"
price-parser = "0.3.4"
beautifulsoup4 = "4.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "4.0.0"
tox = "4.5.1"
coverage = "7.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
sources = [
    {name = "pypi scrapy-processors", url = "https://pypi.org/project/scrapy-processors/"},
]
